gop 2 service lai thanh 1

--- a/src/consumer/ConsumerService.API/ConsumerService.API.csproj
+++ b/src/consumer/ConsumerService.API/ConsumerService.API.csproj
@@ -17,8 +17,10 @@
 
   <ItemGroup>
     <None Remove="Models\" />
+    <None Remove="Services\EventHandlers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Services\EventHandlers\" />
   </ItemGroup>
 </Project>
