update source: copy tu consumer qua producer

--- a/src/consumer/ConsumerService.API/appsettings.json
+++ b/src/consumer/ConsumerService.API/appsettings.json
@@ -1,17 +1,24 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "EventBusSettings": {
+        "SubscriptionClientName": "bussiness-dev",
+        "EventBusRetryCount": 5,
+        "EventBusUserName": "guest",
+        "EventBusPassword": "guest",
+        "EventBusConnection": "localhost"
+    },
+    "ConnectionStrings": {
+        "Default": "server=localhost,1433;database=TracNghiemDB;user=sa;password=Admin@123;"
+    },
+    "Audience": {
+        "name": "TracNghiem",
+        "issuer": "b52ed28bf04f400f8a1366a947052b53",
+        "secret": "5T6yTqfpPo_LkROuqmoLaX5YzyLamBBf_fueCa1wBec"
     }
-  },
-  "AllowedHosts": "*",
-  "EventBusSettings": {
-    "SubscriptionClientName": "bussiness-dev",
-    "EventBusRetryCount": 5,
-    "EventBusUserName": "guest",
-    "EventBusPassword": "guest",
-    "EventBusConnection": "localhost"
-  }
 }
-
