--- a/src/consumer/ConsumerService.API/appsettings.json
+++ b/src/consumer/ConsumerService.API/appsettings.json
@@ -14,11 +14,6 @@
         "EventBusConnection": "localhost"
     },
     "ConnectionStrings": {
-        "Default": "server=localhost,1433;database=TracNghiemDB;user=sa;password=Admin@123;"
-    },
-    "Audience": {
-        "name": "TracNghiem",
-        "issuer": "b52ed28bf04f400f8a1366a947052b53",
-        "secret": "5T6yTqfpPo_LkROuqmoLaX5YzyLamBBf_fueCa1wBec"
+        "Default": "Server=localhost;Port=5433;Database=userdatabase;UserId=myuser;Password=mysecretpassword;"
     }
 }
