--- a/src/producer/ProducerService.API/appsettings.json
+++ b/src/producer/ProducerService.API/appsettings.json
@@ -6,6 +6,11 @@
         }
     },
     "AllowedHosts": "*",
+    "Audience": {
+        "name": "PBL7",
+        "issuer": "b52ed28bf04f400f8a1366a947052b53",
+        "secret": "5T6yTqfpPo_LkROuqmoLaX5YzyLamBBf_fueCa1wBec"
+    },
     "EventBusSettings": {
         "SubscriptionClientName": "bussiness-dev",
         "EventBusRetryCount": 5,
@@ -14,11 +19,6 @@
         "EventBusConnection": "localhost"
     },
     "ConnectionStrings": {
-        "Default": "server=localhost,1433;database=TracNghiemDB;user=sa;password=Admin@123;"
-    },
-    "Audience": {
-        "name": "TracNghiem",
-        "issuer": "b52ed28bf04f400f8a1366a947052b53",
-        "secret": "5T6yTqfpPo_LkROuqmoLaX5YzyLamBBf_fueCa1wBec"
+        "Default": "Server=localhost;Port=5433;Database=mydatabase;UserId=myuser;Password=mysecretpassword;"
     }
 }
