--- a/src/producer/ProducerService.API/ProducerService.API.csproj
+++ b/src/producer/ProducerService.API/ProducerService.API.csproj
@@ -29,9 +29,11 @@
   <ItemGroup>
     <None Remove="Services\" />
     <None Remove="Models\" />
+    <None Remove="Models\Events\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
     <Folder Include="Models\" />
+    <Folder Include="Models\Events\" />
   </ItemGroup>
 </Project>
