upcode update UI, BE

--- a/src/consumer/ConsumerService.API/appsettings.json
+++ b/src/consumer/ConsumerService.API/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "EventBusSettings": {
-        "SubscriptionClientName": "bussiness-dev",
+        "SubscriptionClientName": "consumer-dev",
         "EventBusRetryCount": 5,
         "EventBusUserName": "guest",
         "EventBusPassword": "guest",
