--- a/src/producer/ProducerService.API/appsettings.json
+++ b/src/producer/ProducerService.API/appsettings.json
@@ -12,7 +12,7 @@
         "secret": "5T6yTqfpPo_LkROuqmoLaX5YzyLamBBf_fueCa1wBec"
     },
     "EventBusSettings": {
-        "SubscriptionClientName": "bussiness-dev",
+        "SubscriptionClientName": "producer-dev",
         "EventBusRetryCount": 5,
         "EventBusUserName": "guest",
         "EventBusPassword": "guest",
